<!-- user_item.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp">

    <ImageView
        android:id="@+id/user_img"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/user_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/user_img"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:paddingTop="11dp"
            android:textColor="@color/dark_grey"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_example_com"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/grey"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>
