<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="115dp"
        android:layout_height="119dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.249"
        app:srcCompat="@drawable/ic_photo" />

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_ed_bg"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/dark_grey"
        android:textColorHint="@color/light_grey"
        android:padding="6dp"
        android:paddingStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.172" />

    <EditText
        android:id="@+id/ed_polindrome"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_ed_bg"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp"
        android:hint="@string/palindrome"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/dark_grey"
        android:textColorHint="@color/light_grey"
        android:padding="6dp"
        android:paddingStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_name"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="310dp"
        android:layout_height="38dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_btn_bg"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_check"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/btn_check"
        android:layout_width="310dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/check"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/rounded_btn_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_polindrome"
        app:layout_constraintVertical_bias="0.164" />
</androidx.constraintlayout.widget.ConstraintLayout>